<resources>
    <string name="app_name">JobSearchApp</string>
    <string name="Title_start_fragment_text">Вход в личный кабинет</string>
    <string name="search_work_text">Поиск работы</string>
    <string name="search_employees_tittle_text">Поиск сотрудников</string>
    <string name="search_employees_description_text">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_employees_button">Я ищу сотрудников</string>
    <string name="continue_text">Продолжить</string>
    <string name="sign_in_with_pass_text">Войти с паролем</string>
    <string name="confirm_button">Потвердить</string>
    <string name="confirm_title">Отправили код на example@mail.ru</string>
    <string name="confirm_description">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="mask_pinview_text">****</string>
    <string name="message_error_pin">Введите код полностью</string>
    <string name="email_hint_string">Почта</string>
    <string name="message_error_email">Введите корректный email</string>
    <string name="filter_hint_text">Должность,ключевые слова</string>
    <string name="vacancies_text_tittle">Вакансии для вас</string>
    <string name="profile_menu_string">Профиль</string>
    <string name="message_menu_string">Сообщения</string>
    <string name="resp_menu_string">Отклики</string>
    <string name="favorites_menu_string">Избранное</string>
    <string name="search_menu_string">Поиск</string>
    <string name="response_button_text">Откликнутся</string>
    <string name="add_filter_text">По соответствию</string>
    <string name="iconOffers_description_content_text">iconOffers</string>
    <string name="Favorite_icon_description_text">isFavoriteicon</string>
    <string name="favorites_title_text">Избранное</string>
    <string name="more_vacancies_text">Еще %1$s</string>
    <string name="filter_image_text">Иконка фильтра</string>
    <string name="status_image_content_description_text">Статус загрузки вакансий</string>
    <string name="filter_img_description">иконка фильтра</string>
    <string name="image_status_vacancies_description">иконка статуса закрузки вакансий</string>
    <string name="image_status_offers_description">иконка статуса загрузки предложений</string>
</resources>