<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="AllVacanciesViewModel"
            type="com.example.testapp.presentation.all.AllVacanciesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.head.HeadFragment">

        <ImageView
            android:id="@+id/filter_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/filter_image_text"
            android:minHeight="40dp"
            android:src="@drawable/filter_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/search_edit"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
            app:itemIconTint="@color/bottom_navigation_selector"
            app:itemTextColor="@color/bottom_navigation_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancies_list"
            app:menu="@menu/bottom_nav_menu" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/search_icon_default"
            android:ems="10"
            android:hint="@string/filter_hint_text"
            android:inputType="text"
            android:minHeight="40dp"
            app:layout_constraintBottom_toTopOf="@+id/vacancies_tittle"
            app:layout_constraintEnd_toStartOf="@+id/filter_img"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/vacancies_tittle"
            style="@style/second_tittle_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:TitleVacancies="@{AllVacanciesViewModel.vacanciesCount}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vacancies_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/bottomNav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vacancies_tittle" />

        <TextView
            android:id="@+id/textView"
            style="@style/description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_filter_text"
            android:textColor="@color/blue"
            app:drawableEndCompat="@drawable/add_filter_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filter_img" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/status_image_content_description_text"
            app:statusAPI="@{AllVacanciesViewModel.statusVacancies}"
            app:layout_constraintBottom_toTopOf="@+id/bottomNav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>